src/run/workflow/tests/snapshots/harness__run__workflow__tests__phase_transitions__snapshot_initial_state.snap
---
source: src/run/workflow/tests/phase_transitions.rs
assertion_line: 292
expression: "serde_json::to_string_pretty(&json).unwrap()"
---
{
  "state": {
    "phase": "bootstrap",
    "preflight": {
      "status": "pending"
    }
  },
  "updated_at": "2026-01-01T00:00:00Z",
  "transition_count": 0,
  "last_event": "RunInitialized"
}
