src/run/workflow/tests/snapshots/harness__run__workflow__tests__phase_transitions__snapshot_state_after_cluster_prepared.snap
---
source: src/run/workflow/tests/phase_transitions.rs
assertion_line: 312
expression: "serde_json::to_string_pretty(&json).unwrap()"
---
{
  "state": {
    "phase": "preflight",
    "preflight": {
      "status": "pending"
    },
    "history": [
      {
        "from": "bootstrap",
        "to": "preflight",
        "event": "cluster-prepared",
        "timestamp": "REDACTED"
      }
    ],
    "updated_at": "REDACTED"
  },
  "updated_at": "REDACTED",
  "transition_count": 1,
  "last_event": "ClusterPrepared"
}
