src/run/workflow/tests/snapshots/harness__run__workflow__tests__phase_transitions__snapshot_state_after_full_happy_path.snap
---
source: src/run/workflow/tests/phase_transitions.rs
assertion_line: 325
expression: "serde_json::to_string_pretty(&json).unwrap()"
---
{
  "state": {
    "phase": "completed",
    "preflight": {
      "status": "complete"
    },
    "history": [
      {
        "from": "bootstrap",
        "to": "preflight",
        "event": "cluster-prepared",
        "timestamp": "REDACTED"
      },
      {
        "from": "preflight",
        "to": "execution",
        "event": "preflight-captured",
        "timestamp": "REDACTED"
      },
      {
        "from": "execution",
        "to": "closeout",
        "event": "closeout-started",
        "timestamp": "REDACTED"
      },
      {
        "from": "closeout",
        "to": "completed",
        "event": "run-completed",
        "timestamp": "REDACTED"
      }
    ],
    "updated_at": "REDACTED"
  },
  "updated_at": "REDACTED",
  "transition_count": 4,
  "last_event": "RunCompleted"
}
